# TFTP-server

./: CMakeLists.txt  README.md  tftp.sln  tftp.vcxproj  tftp.vcxproj.filters
src/: AWSSQS.cpp  AWSSQS.h  Logger.cpp  Logger.h  TFTP.cpp  TFTP.h  config.cpp  config.h  init.cfg  main.cpp  pthread_win.cpp  pthread_win.h
